--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Frist GitHub Repos</title>
+ 
  </head>
  <body>
     <h3>Hello Welcome To My Demo Website
@@ -23,5 +24,14 @@
     </ul>
     <p style="background-color: burlywood;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus omnis distinctio voluptatibus debitis placeat recusandae, inventore corporis nostrum facilis, asperiores eveniet laudantium? Nobis ea numquam possimus provident et. Itaque, commodi.</p>
     <p>I am trying to learn repo</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quis, itaque dicta reprehenderit iusto porro unde tempore pariatur doloribus! Minima provident dolores cupiditate eligendi nesciunt ea tempora praesentium iure quibusdam.</p>
+    <p style="background-color: brown;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ullam quidem suscipit iusto vel, possimus libero corporis labore totam nulla mollitia, doloribus deserunt eveniet! Laboriosam consequatur asperiores corporis sint alias.</p>
+    <h3 style="position: relative;">Explore the website</h3>
+    <p>More and more</p>
+    <img src="images/download.jpg" alt="">  
+    
+    <img src="images/download (2).jpg" alt="">
+    <img src="images/download (1).jpg" alt="">
+    <!-- < img src="images/Cash-App.jpg" alt=""> -->
  </body>
  </html>
