--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Frist GitHub Repos</title>
 
- 
+ <link rel="stylesheet" href="styles/blog.css">
  
  </head>
  <body>
@@ -20,7 +20,7 @@
     </h4>
     <div>
     <ul>
-        <li id="Farhan">Farhan</li>
+        <li>Farhan</li>
         <li>Imanul</li>
         <li>Syed</li>
         <li>Islam</li>
